[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/OverworldMenuManager.gd" type="Script" id=1]
[ext_resource path="res://UI/InfoMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/ContextMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/ItemList.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/ElizabethStats.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/OverworldMenu.tscn" type="PackedScene" id=6]

[node name="OverworldMenuManager" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 172.0

[node name="OverworldMenu" parent="HBoxContainer" instance=ExtResource( 6 )]
unique_name_in_owner = true
visible = false
margin_right = 48.0
margin_bottom = 51.0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_bottom = 164.0

[node name="ElizabethStats" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
unique_name_in_owner = true
visible = false
margin_right = 148.0
margin_bottom = 74.0

[node name="ItemList" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
unique_name_in_owner = true
visible = false
margin_top = 78.0
margin_right = 148.0
margin_bottom = 118.0

[node name="ContextMenu" parent="HBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
visible = false
margin_left = 204.0
margin_right = 241.0
margin_bottom = 39.0
size_flags_vertical = 0

[node name="InfoMenu" parent="HBoxContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
visible = false
margin_left = 245.0
margin_right = 357.0
size_flags_vertical = 0

[node name="Timer" type="Timer" parent="."]

[connection signal="option_selected" from="HBoxContainer/OverworldMenu" to="." method="_on_OverworldMenu_option_selected"]
[connection signal="resource_selected" from="HBoxContainer/VBoxContainer/ItemList" to="." method="_on_ItemList_resource_selected"]
[connection signal="option_selected" from="HBoxContainer/ContextMenu" to="." method="_on_ContextMenu_option_selected"]
